--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -245,7 +245,18 @@
     <string name="global_statistics">Global</string>
     <string name="tips">Tips</string>
     <string name="tip">Tip</string>
-    <string name="no_data_available_in_period">No data available in this period!</string>
+    <string name="no_data_available_in_period">No data available in the given period!</string>
+    <string name="pie_center_today">Today</string>
+    <string name="pie_center_yesterday">Yesterday</string>
+    <string name="pie_center_week">Last week</string>
+    <string name="pie_center_two_weeks">Last 2 weeks</string>
+    <string name="pie_center_month">Last month</string>
+    <string name="pie_center_three_month">Last 3 months</string>
+    <string name="pie_description_longer">The sum of time spent on activities in period</string>
+    <string name="pie_description_average">The daily average of time spent on activities in period</string>
+    <string name="pie_description_one_day">Time spent on activities in the day</string>
+    <string name="pie_sum">(sum)</string>
+    <string name="pie_average">(average)</string>
     <!-- Statistics filter -->
     <string name="filter_from_to_error">The beginning must be before the end date!</string>
     <string name="must_choose_one_error">You must choose All or at least one activity!</string>
