Refactoring global statistics

--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -186,19 +186,19 @@
     <string name="select_age_group">Válassz korosztályt!</string>
     <string name="both">Mindekettő</string>
     <string name="all_age_group_chip">Összes</string>
-    <string name="fe_0">Nő \\u003C20</string>
+    <string name="fe_0">Nő &lt;20</string>
     <string name="tip">Javaslat</string>
     <string name="fe_1">Nő 20-29</string>
     <string name="fe_2">Nő 30-39</string>
     <string name="fe_3">Nő 40-49</string>
     <string name="fe_4">Nő 50-59</string>
-    <string name="fe_5">Nő \\u003E60</string>
-    <string name="ma_0">Férfi \\u003C20</string>
+    <string name="fe_5">Nő &gt;60</string>
+    <string name="ma_0">Férfi &lt;20</string>
     <string name="ma_1">Férfi 20-29</string>
     <string name="ma_2">Férfi 30-39</string>
     <string name="ma_3">Férfi 40-49</string>
     <string name="ma_4">Férfi 50-59</string>
-    <string name="ma_5">Férfi \\u003E60</string>
+    <string name="ma_5">Férfi &gt;60</string>
     <string name="dark_mode">Sötét téma</string>
     <string name="create_backup">"Adatok mentése felhőbe (internet kapcsolattal) "</string>
     <string name="save_data">Feltöltés</string>
@@ -282,4 +282,23 @@
     <string name="new_act_interval_date_error">A kezdő napnak korábban kell lennie az utolsó napnál!</string>
     <string name="edit_act_interval_date_error">A kezdő napnak korábban kell lennie az utolsó napnál!</string>
     <string name="edit_act_end_date_error">A határidő nem lehet korábban mint a mai nap!</string>
+    <string name="statistics_loading">Töltés...</string>
+    <string name="pie_average">(átlag)</string>
+    <string name="pie_sum">(összeg)</string>
+    <string name="no_data_available_in_period">Nem érhető el adat!</string>
+    <string name="pie_center_today">Ma</string>
+    <string name="pie_center_yesterday">Tegnap</string>
+    <string name="pie_center_week">Elmúlt hét</string>
+    <string name="pie_center_two_weeks">Elmúlt 2 hét</string>
+    <string name="pie_center_month">Elmúlt hónap</string>
+    <string name="pie_center_three_month">Elmúlt 3 hónap</string>
+    <string name="pie_description_longer">Ebben az időszakban a tevékenységgel töltött idő összege</string>
+    <string name="pie_description_average">Ebben az időszakban a tevékenységgel töltött idő napi átlaga</string>
+    <string name="pie_description_one_day">A napon a tevékenységgel töltött idő</string>
+    <string name="filter_from_to_error">Az intervallum kezdetének hamarabb kell lennie mint a végének!</string>
+    <string name="must_choose_one_error">Válaszd az Összes-et vagy legalább egy tevékenységet!</string>
+    <string name="one_act_longer_period_error">Egy tevékenység esetén válassz hosszab időtartamot vagy egyedi napot!</string>
+    <string name="global_statistics_average_daily">Naponkénti átlag</string>
+    <string name="global_statistics_average_gender_and_age_group">Átlag nemenként és korosztályonként az adott napra</string>
+    <string name="pie_description_global_average">Ebben az időszakban a tevékenységgel töltött átlagos idő</string>
 </resources>
